final update Mk I

--- a/Alicegear/aliceinfopage.html
+++ b/Alicegear/aliceinfopage.html
@@ -10,29 +10,31 @@
     <link rel="stylesheet" href="mystyle.css"> 
     
 </head>
+
+<body>
+    <div id="container-camo">
+    <div id="container">
 <header>
 <h1 class="heading1">The Basics of Alice LC-2 </h1>
 </header>
-
+</div>
 <main>
     
 <p>
-    All Purpose Lightweight Individual Carrying Equipment or Alice is a
-    type of belt and suspenders load bearing equipment used by the United
-    States Military from 1973 to around 2006 but don't let age fool you, the old girl is still a
-    viable option for civilian/militia use or for airsofters. While it may not be the most high spped, or fancy tactical gear 
-    out there, its cost effectiveness and durability makes it a perfect choice for those on a budget,
-     if you have a lot of people on your team to equip, or are more interested in retro 
-    setups like those used in Operation Gothic Serpent (battle of Mogadishu) or literally any conflict the 
-    United States has been invovled in since 1973 up to the middle of the Great War On Terror or GWOT. 
-
+    All Purpose Lightweight Individual Carrying Equipment or Alice is a Load Bearing Equipment or LBE System adopted by the
+    US Military in 1973, and is of a belt and suspenders style of load bearing equipment. While this setup is a product of
+    the cold war, and in the eyes of some it's outdated, the old girl still has some uses even in todays modern world full
+    of high speed special operations gear such as the equipment designed by Spiritus Systems or Crye Presicion, especially
+    for the prepared citizen on a budget, or those who love the more retro cold war aesthetic.
+</p>
 <hr>
 
 <nav>
     <ul>
-    <li><a href="aliceinfopage2.html">Alice Set Up</a></li>
+    <li><a href="aliceinfopage2.html">Set Up</a></li>
     <li><a href="aliceinfopage3.html">Belt Sizing</a></li>
     <li><a href="aliceinfopage4.html">Equipment Overview</a></li>
+    <li><a href="aliceinfopage5.html">Alice History</a></li>
       </ul>
     </nav>
 
@@ -41,36 +43,33 @@
 <img src="Pictures/AliceRifle.jpg" width="700" height="300" alt="Author's setup">
 </div>
 <p>
-    This setup is multipurpose as it can be used for both Airsoft and real steel
-    which is jargon for actual firearms, we will be using both interchangably and when it comes to capacity, we will be using real steel numbers most of the time,
-    due to the fact all airsoft mags are varying in capacity depending on manufacturers and many more factors we will not be getting into. 
-    This is what could be reffered to as a riflemans setup at most airsoft fields, or as a typical infantry setup for those it should concern.
-     Starting from left to right, consisting of
+    This setup is highly simplistic, and is actually only one of my setups, as I tend to have different setups for 
+    different uses, this is more of a light patrol sort of setup consisting of
 </p>
-
-<img src="Pictures/magpouchalt.jpg" alt="Mag Pouch"> 
+<figure>
+<img class="adjust" src="Pictures/magpouchalt.jpg" alt="Mag Pouch"> 
+<figcaption>Open LC-2 Mag pouch with STANAG magazines</figcaption>
+</figure>
 <ul>
-    <li>Two magazine pouches with grenade pouches holding three 30 round
-        STANAG magazines each or three airsoft M4 pattern magazines in which case capacity will vary
-    Most airsoft grenades will not work in these pouchesunless they are pyrotechnic grenades since they 
-usually are too big and/or cylindrical, they're meant to hold actual fragmentation grenades </li>
+    <li>Two magazine pouches with grenade pouches holding three 30 round STANAG magazines each</li>
     <li>One US M12 Universal Holster with KWA M9 PTP but can also hold an M1911 or most other pistols with a 5 inch barrel</li>
     <li>One butt pack which should be used for sustainment for long events, such as snacks</li>
     <li>One SAW gunners pouch, being used as a dump pouch for spent mags</li>
-    <li>One M3 clip on bipod pouch, with bipod. Not needed urgently </li>
-    <li>One 2 mag M1911 bianchi magazine pouch M1025</li>
-    <li>One Fulton Flashlight stuffed in second M4 Mag pouch. However it is advised to
-        not use the Flashlight so it doesn't get shot out by a BB unless you are crafty enough to replace
-    the lens with a lexan or other durable material like plexiglass </li>
+    <li>One M3 clip on bipod pouch, with bipod. Not needed urgently and has been removed </li>
+    <li>One 2 mag M1911 bianchi magazine pouch M1025, will be replaced with one for a double stack 9mm</li>
+    <li>One Fulton Flashlight stuffed in second Mag pouches grenade slot. While normally retained on the shoulder straps, i find this to be less
+        of a hinderance when shouldering a rifle. 
+    </li>
 </ul>
 <p>I have since upgraded to the LBV-88E vest with Alice belt setup but I still retain a basic setup as a backup, and I do switch
-    between the two often. I have used the Alice System in some way since late 2020 when I bought an M12 holster for my KWA
-    beretta, and since then have built out several alice set ups in various setups and configurations to see what works best. 
-    While it may not be the most fashionable and high speed of setups, it is a setup that if it came down to it, I would entrust
-    my own life to this system. 
+    between the two often. I have used the Alice System in some way since late 2020 for airsoft purposes, and I use it as my personal
+    setup for real steel events or applications. While it may not look the best, or be as sleek and high tech as modern offerings but it
+    accomplishes all the things I need it to do. All kit must first and foremost carry and retain items and allow it to be readily
+    accesible, and ALICE does this very well and when used properly can be quite comfortable. 
 </p>
-</main>
- <hr>
+</main></div>
+ </body>
+ <div id="container">
 <footer class="footer1">
 <h3 class="header1">Want to learn more? Click the links here.</h3>
  <ul>
@@ -80,10 +79,9 @@ usually are too big and/or cylindrical, they're meant to hold actual fragmentati
 
 <li><a href="https://www.ccmilitary.com/blogs/resources/a-fasten-ating-story-about-alice-molle"> Alice Extended Info</a> </li>
 </ul>
-</footer>
 <p>
 &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
 aside from how the author uses it personally is free information publically availible and protected under fair use.
-</p>
+</p></footer></div>
 
 </html>
