--- a/Alicegear/aliceinfopage4.html
+++ b/Alicegear/aliceinfopage4.html
@@ -14,6 +14,7 @@
     <li><a href="aliceinfopage.html">Back to home</a></li>
     <li><a href="aliceinfopage2.html">How to use Alice </a></li>
     <li><a href="aliceinfopage3.html">Belt Sizing </a></li>
+    <li><a href="aliceinfopage5.html">History</a></li>
     </ul>
 </nav>
 </div>
@@ -49,8 +50,32 @@
     buckles to open and close the pack making it easier to use and it does have waterproofing capabilies, but I would still have a
     dry bag within the pack for more watersensitive items just to be safe.
 </p>
+ <h2>Use of Pistols and body armor with the Alice System</h2>
+<p>
+Pistols or handguns are not always issued to basic soldiers, but for civilians/militia use, pistols are an important piece of kit, 
+aside from your rifle. However, there is only two holsters that will work with this system. The old M1916 holsters for the M1911
+and M1911A1 .45 Auto pistols which were in service for both world wars, korea, and vietnam are the first one, but unless you go
+aftermarket you are stuck with a right handed draw. This brings us the M12 or the UM84 holster designed by bianchi. It can be set up 
+for either left or right handed draw. While it is primarily intended for the US M9 beretta pistol, the 1911A1, Sig P226, and most other
+full size semi auto pistols with a five inch barrel will fit. Pouches for spare magazines are a different story and include the
+</p>
+<ul>
+    <li>M1956 two mag 1911 pouch</li>
+    <li>M1967 two mag 1911 pouch</li>
+    <li>any US M1911 pistol magazine pouches using M1910 hangars</li>
+    <li>9mm ammunition pouch, this holds a single 15 round M9 magazine or similar sized mags </li>
+    <li>Bianchi M1025 (two mag) or M1030 (four mag) pouch. Will fit either double stack or single stack magazines</li>
+</ul>
+<p>
+The reason there is a bit of confusion is that in 1985 the US Military adopted the beretta M9 pistol right in the middle of the alice 
+systems service life. Despite this, the M1911A1 remained in limited service, especially in special forces and the marine corps so both 
+at times did serve side by side such as the previously mentioned battle of Mogadishu. Body Armor is another issue. Only Pasgt vests,
+and the Ranger Body Armor (RBA) were designed to be used with alice in mind, however any slick armor carrier or body armor under the clothing
+will do the trick. Caution, the PASGT vest is a fragmentation vest only, it is not rated to stop ballistic threats, only shrapnel. The Ranger
+Body Armor is quite rare to find and most clones of it are not of service grade quality. 
+</p>
 
-<h2>Photo Gallery</h2>
+<h3>Photo Gallery</h3>
 <img src="Pictures/Woodlandbuttpack.jpg" alt="training pack">
 <p>Butt Pack</p>
 <img src="Pictures/firstaidkit.jpg" alt="first aid kit">
