Final Update Mk1A

--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -10,7 +10,7 @@
     <div id="container-camo">
 <header><h1 class="header1">How to use Alice LC-2</h1></header>
 
-
+<div id="container">
     <nav> 
         <ul>
         <li><a href="aliceinfopage.html">Back to home</a></li>
@@ -18,7 +18,7 @@
         <li><a href="aliceinfopage4.html">Equipment Overview</a></li>
         <li><a href="aliceinfopage5.html">Alice History</a></li>
     </ul>
-    </nav>
+    </nav></div>
 <main >
     <p>
        Alice is an early modular setup that uses small metal clips called slide keepers, which actually were a carry over from the M1956 system, but most
