--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -10,7 +10,7 @@
     
 </head>
 
-   
+   <div id="container">
 <header><h1 class="header1">ALICE Belts 101</h1></header>
 
 <nav>
@@ -20,7 +20,7 @@
 <li><a href="aliceinfopage4.html">Equipment Overview</a></li>
 <li><a href="aliceinfopage5.html">Alice History</a></li>
 </ul>
-</nav>
+</nav></div>
 <main>
     <p>
         While alice is versatile, there is only one item where your size becomes an issue, and that is where the belt comes in. 
@@ -87,17 +87,17 @@ was one of the last official changes to the ALICE system before it was retired a
 availible and as tons of it never saw combat, they're in great shape! It should be noted that this belt may often be sold as an LC-2 
 but many use LC-3 to distingush the two. 
 </p>
-</main>
+</main>  <div id="container"></div>
 <footer>
 
-    <div id="banner">
+  
         <h3>Legal Disclaimer</h3>
-    </div>
+  
     <p>
         &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
         aside from how the author uses it personally is free information publically availible and protected under fair use.
         </p>
-</footer>
+</footer>  </div>
 
 
 
