--- a/Alicegear/aliceinfopage4.html
+++ b/Alicegear/aliceinfopage4.html
@@ -8,9 +8,10 @@
     <title> LC-2 Equipment</title>
     <link rel="stylesheet" href="mystyle.css"> 
 <body>
-    
-<header>Equipment overview under the LC-2 System</header>
-<div id="container"><nav>  <ul>
+   <div id="container">
+<header>
+<h1>Equipment overview under the LC-2 System</h1></header>
+<nav>  <ul>
     <li><a href="aliceinfopage.html">Back to home</a></li>
     <li><a href="aliceinfopage2.html">How to use Alice </a></li>
     <li><a href="aliceinfopage3.html">Belt Sizing </a></li>
@@ -83,12 +84,13 @@ Body Armor is quite rare to find and most clones of it are not of service grade 
 <img src="Pictures/entrenchingtool.jpg" alt="Entrenching tool">
 <p>Entrenching tool with rubber carrying pouch</p>
 </main>
-<footer> <div id="banner">
+<div id="container"></div>
+<footer> 
     <h3>Legal Disclaimer</h3>
-</div>
+
 <p>
     &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
     aside from how the author uses it personally is free information publically availible and protected under fair use.
-    </p></footer>
+    </p></footer></div>
 </body>
     </html>
