Final Update Mk1A1

--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -87,7 +87,7 @@ was one of the last official changes to the ALICE system before it was retired a
 availible and as tons of it never saw combat, they're in great shape! It should be noted that this belt may often be sold as an LC-2 
 but many use LC-3 to distingush the two. 
 </p>
-</main>  <div id="container"></div>
+</main>  <div id="container">
 <footer>
 
   
