--- a/Alicegear/aliceinfopage4.html
+++ b/Alicegear/aliceinfopage4.html
@@ -84,7 +84,7 @@ Body Armor is quite rare to find and most clones of it are not of service grade 
 <img src="Pictures/entrenchingtool.jpg" alt="Entrenching tool">
 <p>Entrenching tool with rubber carrying pouch</p>
 </main>
-<div id="container"></div>
+<div id="container">
 <footer> 
     <h3>Legal Disclaimer</h3>
 
