The Final Project
Its the final braincell!

--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
     <title> Alice Set Up</title>
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
 <body>
-    <div id="container-camo">
+<div id="container">  
 <header><h1 class="header1">How to use Alice LC-2</h1></header>
 
-<div id="container">
+
     <nav> 
         <ul>
         <li><a href="aliceinfopage.html">Back to home</a></li>
         <li><a href="aliceinfopage3.html">Belt Sizing</a></li>
-        <li><a href="aliceinfopage4.html">Equipment Overview</a></li>
+        <li><a href="aliceinfopage4.html">Equipment</a></li>
         <li><a href="aliceinfopage5.html">Alice History</a></li>
     </ul>
-    </nav></div>
+    </nav>
+
 <main >
     <p>
        Alice is an early modular setup that uses small metal clips called slide keepers, which actually were a carry over from the M1956 system, but most
@@ -102,8 +104,8 @@
     is that if you can pull on it, so can your enviroment. The same rules apply to your butt pack if you have one, getting that caught on
     something like a branch or nail is frustrating and awkward to clear. 
 </p>
-</main></div></body>
-<div id="container">
+</main>
+
 <footer>
     <h3>Learn More here </h3>
 <ul>
@@ -117,5 +119,8 @@
     &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
     aside from how the author uses it personally is free information publically availible and protected under fair use.
     </p>
-    </footer></div>
+    </footer>
+</div>
+</div>
+</body>
 </html>
