--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
     <title> Alice LC-2 Belt Sizing </title>
     <link rel="stylesheet" href="mystyle.css"> 
     
 </head>
-
+<body>
    <div id="container">
 <header><h1 class="header1">ALICE Belts 101</h1></header>
 
@@ -17,10 +18,10 @@
 <ul>
 <li><a href="aliceinfopage.html">Back to home</a></li>
 <li><a href="aliceinfopage2.html">Alice Setup</a></li>
-<li><a href="aliceinfopage4.html">Equipment Overview</a></li>
+<li><a href="aliceinfopage4.html">Equipment</a></li>
 <li><a href="aliceinfopage5.html">Alice History</a></li>
 </ul>
-</nav></div>
+</nav>
 <main>
     <p>
         While alice is versatile, there is only one item where your size becomes an issue, and that is where the belt comes in. 
@@ -87,7 +88,7 @@ was one of the last official changes to the ALICE system before it was retired a
 availible and as tons of it never saw combat, they're in great shape! It should be noted that this belt may often be sold as an LC-2 
 but many use LC-3 to distingush the two. 
 </p>
-</main>  <div id="container">
+</main>  
 <footer>
 
   
@@ -97,8 +98,8 @@ but many use LC-3 to distingush the two.
         &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
         aside from how the author uses it personally is free information publically availible and protected under fair use.
         </p>
-</footer>  </div>
-
+</footer>  </div> </body>
+</html>
 
 
 
