--- a/Alicegear/aliceinfopage4.html
+++ b/Alicegear/aliceinfopage4.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
     <title> LC-2 Equipment</title>
     <link rel="stylesheet" href="mystyle.css"> 
 <body>
@@ -18,7 +19,7 @@
     <li><a href="aliceinfopage5.html">History</a></li>
     </ul>
 </nav>
-</div>
+
 <main>
 <p>
     While we have mentioned various pouches and accessories, this will be an overall list of all equipment
@@ -77,20 +78,37 @@ Body Armor is quite rare to find and most clones of it are not of service grade 
 </p>
 
 <h3>Photo Gallery</h3>
-<img src="Pictures/Woodlandbuttpack.jpg" alt="training pack">
-<p>Butt Pack</p>
-<img src="Pictures/firstaidkit.jpg" alt="first aid kit">
-<p>First Aid Kit</p>
-<img src="Pictures/entrenchingtool.jpg" alt="Entrenching tool">
-<p>Entrenching tool with rubber carrying pouch</p>
+<div id="multi_col">
+    <div class="col">
+<figure>
+<img src="Pictures/Woodlandbuttpackmod.png" alt="training pack" >
+<figcaption>M81 Training butt pack</figcaption>
+</figure>
+</div>
+<div class="col">
+<figure>
+<img src="Pictures/firstaidkitmod.png" alt="first aid kit">
+<figcaption>Individual First Aid Kit</figcaption>
+</figure>
+</div>
+<div class="col">
+<figure>
+<img src="Pictures/entrenchingtoolmod.png" alt="Entrenching tool">
+<figcaption>Entrenching Tool with rubber case</figcaption>
+</figure>
+</div>
+</div>
+
 </main>
-<div id="container">
+
 <footer> 
     <h3>Legal Disclaimer</h3>
 
 <p>
     &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
     aside from how the author uses it personally is free information publically availible and protected under fair use.
-    </p></footer></div>
+    </p>
+</footer>
+</div>
 </body>
     </html>
