--- a/Alicegear/aliceinfopage5.html
+++ b/Alicegear/aliceinfopage5.html
@@ -5,9 +5,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
     <title>History of the Alice System</title>
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
+<body>
 <div id="container"><nav>  <ul>
     <li><a href="aliceinfopage.html">Back to home</a></li>
     <li><a href="aliceinfopage2.html">How to use Alice </a></li>
@@ -33,8 +35,18 @@ in tropical enviroments and even then, many soliders were mixing and matching bo
 years of the Vietnam War in 1973, the All-purpose Lightweight Individual Carrying Equipment or ALICE was offically adopted by all branches of
 the US Military
 </p>
-<figure><img class="adjust" src="Pictures/M1967A.jpg" alt="Front side M1967"> <figcaption>Front view of M1967 MLCE</figcaption></figure>
-<figure><img class="adjust" src="Pictures/M1967B.jpg" alt="Back side M1967"><figcaption>Rear view of M1967 MLCE</figcaption></figure>
+<div id="multi_col">
+    <div class="col">
+<figure><img class="adjust" src="Pictures/M1967A.jpg" alt="Front side M1967">
+    <figcaption>Front view of M1967 MLCE</figcaption>
+</figure>
+</div>
+<div class="col"> 
+<figure><img class="adjust" src="Pictures/M1967B.jpg" alt="Back side M1967">
+    <figcaption>Rear view of M1967 MLCE</figcaption>
+</figure>
+</div>
+</div>
 <h2>
 The Cold War
 </h2>
@@ -94,4 +106,5 @@ as modular as molle or todays placard systems, but it has stood the test of time
         &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
         aside from how the author uses it personally is free information publically availible and protected under fair use.
         </p>
-</footer>
+</footer></body>
+</html>
