The Final Project
take 2

--- a/Alicegear/aliceinfopage5.html
+++ b/Alicegear/aliceinfopage5.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
+    <link rel="icon" href="Pictures/favicon.ico">
     <title>History of the Alice System</title>
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
