--- a/Alicegear/aliceinfopage2.html
+++ b/Alicegear/aliceinfopage2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
+    <link rel="icon" href="Pictures/favicon.ico">
     <title> Alice Set Up</title>
     <link rel="stylesheet" href="mystyle.css"> 
 </head>
@@ -121,6 +121,6 @@
     </p>
     </footer>
 </div>
-</div>
+
 </body>
 </html>
