--- a/Alicegear/aliceinfopage3.html
+++ b/Alicegear/aliceinfopage3.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="icon" type="image" sizes="32x32" href="Pictures/favicon.ico">
+    <link rel="icon" href="Pictures/favicon.ico">
     <title> Alice LC-2 Belt Sizing </title>
     <link rel="stylesheet" href="mystyle.css"> 
     
