The Final Update

--- a/Alicegear/aliceinfopage5.html
+++ b/Alicegear/aliceinfopage5.html
@@ -106,5 +106,7 @@ as modular as molle or todays placard systems, but it has stood the test of time
         &#169; This website is copyrighted by Gabriel Collins, the Author, for use as a college project. All information
         aside from how the author uses it personally is free information publically availible and protected under fair use.
         </p>
-</footer></body>
+</footer>
+</div>
+</body>
 </html>
