The Update To End All Updates

--- a/Alicegear/aliceinfopage5.html
+++ b/Alicegear/aliceinfopage5.html
@@ -64,7 +64,7 @@ premier design firms, was already designing a new system for a new millenium.
 </p>
 <figure><img class="adjust" src="Pictures/panama.jpg"><figcaption>US Troops in Alice LC-2 during Operation Just Cause aka Invasion of Panama</figcaption></figure>
 <p>Colt Promo Video showing US troops using alice LC-2 at various points</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9WIROZycUE4?si=ks3ygvYnDhIfQmJn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9WIROZycUE4?si=ks3ygvYnDhIfQmJn" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 <h3>The Individual Integrated Fighting System</h3>
